--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,6 +26,7 @@
 	text-align: center;
 	padding: 1em 8em;
 }
+
 .template{
 	color: #98979F;
 	font-size: 1.1em;
@@ -45,48 +46,56 @@
 	line-height: 3em;
 	border-radius: .5em;
 }
+.fourpics{
+	margin-right: 2em;
+	margin-left: 2em;
+}
+.thumbnail{
+	border: none;
+	span{
+		padding-left: 5em;
+	}
+}
 .line{
 	border-top:1px solid black;
 	margin: 1em 2em 1em 2em;
 }
 .texty{
 	color: #BABABA;
+	
 }
 .welcometo{
 	color: #999999;
-	margin-bottom: 1em;
+	margin: 1em 2em;
 }
 .welcometotext{
 	color: #BABABA;
-	margin-bottom: 1em;
+	margin: 1em 2em;
 }
 footer{
 	color: white;
 	background-color:#383F48;
-	overflow: hidden;
+	// overflow: hidden;
 	margin-top: 1em;
 	.firstsection{
 		padding: 2em 2em;
-		float: left;
-		width: 33%;
+	
 		color: #BABABA;
 		.snappy{
 			font-size: 1.3em;
 		}
 	}
 	.secondsection{
-		float: right;
-		width: 25%;
-		padding: 2em 1em;
+	
+		padding: 2em 2em;
 		color: #BABABA;
 		.aboutus{
 			font-size: 1.3em;
 		}
 	}
 	.thirdsection{
-		float: right;
-		width: 25%;
-		padding: 2em 1em;
+	
+		padding: 2em 2em;
 		color: #BABABA;
 		.contactus{
 			font-size: 1.3em;
@@ -112,7 +121,7 @@ footer{
 			padding: 6.7em 0 0 0;
 			margin-right: 5em;
 		}
-	
+
 }
 
 @media screen and (min-width:62em){
