--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,25 +11,27 @@
 .backgroundpic{
 	background-image: url("https://github.com/TIY-Austin-Front-End-Engineering/bootstrap-grid/blob/master/images/hero-dark.jpg?raw=true");
 	background-size: cover;
-	height: 15.125em;
+	padding: 3em 2em;
 	width: 100%;
-	box-sizing: border-box;
+	margin: auto;
 }
+
 .snapgrid{
 	color: white;
 	text-align: center;
-	padding-top: 2em;
 	font-size: 2em;
 }
 .snapgrid2{
 	color: white;
 	text-align: center;
-	padding: 1em 8em;
 }
-
+.firstchunky{
+	padding-top: 2em;
+}
 .template{
 	color: #98979F;
 	font-size: 1.1em;
+
 }
 
 .sometext{
@@ -75,7 +77,6 @@
 footer{
 	color: white;
 	background-color:#383F48;
-	// overflow: hidden;
 	margin-top: 1em;
 	.firstsection{
 		padding: 2em 2em;
@@ -104,52 +105,4 @@ footer{
 }
 
 
-@media screen and (min-width:48em){
-	.backgroundpic{
-		overflow:hidden;
-	}
-		.snapgrid{
-			box-sizing: border-box;
-			float: left;
-			// width: 50%;
-			padding: 3em 1em 0 25%;
-		}
-		.snapgrid2{
-			box-sizing: border-box;
-			float: left;
-			width:20em;
-			padding: 6.7em 0 0 0;
-			margin-right: 5em;
-		}
 
-}
-
-@media screen and (min-width:62em){
-	
-}
-
-@media screen and (min-width:75em){
-	
-	.backgroundpic{
-		overflow: none;
-		.snapgrid{
-			box-sizing: none;
-			float: none;
-			font-size: 3em;
-			padding: 1em 0 0 0;
-		}
-		.snapgrid2{
-			box-sizing: none;
-			float: none;
-			width:none;
-			padding: 2em 0 0 0;
-			margin: 0 auto;
-		}
-	}
-	.template{
-		font-size: 1.5em;
-	}
-	.sometext{
-		font-size: .9em;
-	}
-}
